--- a/projnew/html/farcry6.html
+++ b/projnew/html/farcry6.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/paginas_jogos.css">
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/background/diablo.css">
-    <title>Diablo IV - GameReview</title>
+    <title>Far Cry 6 - GameReview</title>
+    <style>
+    body::before{
+        background-image: url(/img/far_cry_6_wall.jpeg);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        position: absolute;
+        width: 100%;
+        background-position: center center;
+        background-size: 110%;
+        content: "";
+        height: 100vh;
+        z-index: -2;
+        opacity: .2;
+        transition: 1s;
+        box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
+    }
+
+    body.scrolled::before {
+        background-size: 100%;  
+    }
+        </style>
 </head>
 <body>
     
@@ -31,25 +51,25 @@
     <main>
         <div class="descricao">
             <div class="imagem">
-                <img src="/img/diablo.png" alt="minecraft">
+                <img src="/img/far_cry.jpg" alt="minecraft">
             </div>
             <div class="escrita">
-                <h1>Diablo IV</h1>
-                <p>Diablo IV é um jogo de RPG de ação desenvolvido e publicado pela Blizzard Entertainment, sendo o quarto título principal da série Diablo. O jogo se passa no mundo sombrio e gótico de Sanctuary, onde os jogadores enfrentam forças demoníacas e exploram vastas terras em busca de poder e glória.</p>
+                <h1>Far Cry 6</h1>
+                <p>Far Cry 6 é um jogo de tiro em primeira pessoa lançado pela Ubisoft em 2021. Ambientado na fictícia ilha caribenha de Yara, o enredo gira em torno da luta de um guerrilheiro, Dani Rojas, contra o regime ditatorial liderado por Anton Castillo, interpretado por Giancarlo Esposito.</p>
                 <div></div>
-                <p>O enredo de Diablo IV gira em torno do retorno da vilã Lilith, filha de Mephisto, que busca trazer terror e destruição ao mundo. Os jogadores devem enfrentar não apenas Lilith, mas também outras ameaças demoníacas, incluindo os adoradores do culto de Rathma e os exércitos demoníacos liderados por Lilith.</p>
+                <p>Os jogadores exploram um vasto e diversificado ambiente de mundo aberto, composto por selvas exuberantes, cidades movimentadas e praias pitorescas, enquanto enfrentam desafios e inimigos variados.</p>
                 <div></div>
-                <p>O jogo apresenta uma jogabilidade envolvente e visceral, com ação intensa, combate fluído e uma variedade de classes de personagens para escolher, cada uma com habilidades únicas e árvores de talentos para personalização. Além disso, Diablo IV promete um mundo aberto e dinâmico, com eventos aleatórios, masmorras geradas proceduralmente e um sistema de clima que afeta o ambiente e o combate.</p>
+                <p>Além da ação intensa, o jogo aborda temas pertinentes, como ditadura, revolução e a busca pela liberdade, proporcionando uma experiência imersiva e envolvente para os jogadores. A narrativa e jogabilidade de Far Cry 6 receberam elogios pela sua profundidade e capacidade de abordar questões políticas e sociais de forma impactante.</p>
             </div>
         </div>
-        <div class="sobre">
+        <div class="sobre" style="margin-top: 170px;">
             <div>
-                <p><strong>Desenvolvedora:</strong> <a href="/">Actvision Blizzard</a></p>
-                <p><strong>Data de lançamento:</strong> 06/06/2023</p>
-                <p><strong>Gêneros:</strong> RPG de ação</p>
-                <p><strong>Crossplay:</strong> Possui Crossplay entre todas as plataformas</p>
-                <p><strong>Edições:</strong> Edição Padrão, Edição Digital Deluxe, Edição Ultimate</p>
-                <p><strong>Tempo de jogo:</strong> 80 horas</p>
+                <p><strong>Desenvolvedora:</strong> <a href="/">Ubisoft</a></p>
+                <p><strong>Data de lançamento:</strong> 07/10/2023</p>
+                <p><strong>Gêneros:</strong> Mundo aberto e aventura</p>
+                <p><strong>Crossplay:</strong> Modo coopertivo possui Crossplay entre consoles (Playstation 4, Playstation 5, Xbox One, Xbox Series X/S)</p>
+                <p><strong>Edições:</strong> Edição Padrão, Edição Deluxe, Edição Gold, Edição Game of the Year, Edição de Colecionador</p>
+                <p><strong>Tempo de jogo:</strong> 23 horas</p>
             </div>
             <div>
                 <h2>Requisitos mínimos</h2>
@@ -128,9 +148,9 @@
                 </div>
                 <div class="spotify">
                     <h2 class="trailer">Trailer</h2>
-                    <iframe width="100%" height="370px" src="https://www.youtube.com/embed/vL44VbiSnpY?si=q3tGnE-gvw9pxuZy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                
+                    <iframe width="100%" height="370px" src="https://www.youtube.com/embed/Jp5Y-a_oiPM?si=sQx548wpEMU7A991" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <h2 class="soundtrack">Soundtrack</h2>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1of5HM6vfUTO8ecBEmxLxd?utm_source=generator&theme=0" width="100%" height="450x" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>                    
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/464LjhUxPGmVwhm49mmSXg?utm_source=generator&theme=0" width="100%" height="400" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>                
                 </div>
             </div>
 
