--- a/projnew/index.html
+++ b/projnew/index.html
@@ -69,7 +69,7 @@
             <a  href="html/diablo.html" class="container">
                 <img src="img/diablo.png">
             </a>
-            <a  href="" class="container">
+            <a  href="html/farcry6.html" class="container">
                 <img src="img/far_cry.jpg">
             </a>
             <a  href="" class="container">
