--- a/projnew/html/minecraft.html
+++ b/projnew/html/minecraft.html
@@ -145,19 +145,20 @@
                             </div>
                         </div>
                     </div>
+                    <div class="avaliacaouser">
+                        <h2>Reviews dos usuários</h2>            
+                        <textarea name="user_avali" id="user_avali" placeholder="Deixe sua review..."></textarea>
+                        <input type="submit" value="Enviar" id="enviar">
+                    </div>
                 </div>
                 <div class="spotify">
-                    <h2>Soundtrack</h2>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1mjddPuTpWVT4LIQvT7vFR?utm_source=generator&theme=0" width="100%" height="450px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                     <h2 class="trailer">Trailer</h2>
                     <iframe width="100%" height="350px" src="https://www.youtube.com/embed/MmB9b5njVbA?si=ePfrly7h1AIBFfbK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>                
+                    <h2 class="soundtrack">Soundtrack</h2>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1mjddPuTpWVT4LIQvT7vFR?utm_source=generator&theme=0" width="100%" height="770px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
             </div>
-            <div class="avaliacaouser">
-                <h2>Reviews dos usuários</h2>            
-                <textarea name="user_avali" id="user_avali" placeholder="Deixe sua review..."></textarea>
-                <input type="submit" value="Enviar" id="enviar">
-            </div>
+
     </main>
 
     <footer>
