--- a/html/diablo.html
+++ b/html/diablo.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/paginas_jogos.css">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/background/diablo.css">
+    <link rel="stylesheet" href="css/paginas_jogos.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/background/diablo.css">
     <title>Diablo IV - GameReview</title>
 </head>
 <body>
