--- a/html/diablo.html
+++ b/html/diablo.html
@@ -20,7 +20,7 @@
                 <li>           
                     <div id="busca">     
                         <input type="search" name="busca" id="input"  placeholder="Buscar..." onkeypress="checkEnter(event)">
-                        <img src="/assets/lupa.png" alt="lupa" id="lupa" onclick="busca()">
+                        <img src="assets/lupa.png" alt="lupa" id="lupa" onclick="busca()">
                     </div>
                     <ul id="resultadoPesquisa"></ul>
                 </li>
@@ -31,7 +31,7 @@
     <main>
         <div class="descricao">
             <div class="imagem">
-                <img src="/img/diablo.png" alt="minecraft">
+                <img src="img/diablo.png" alt="minecraft">
             </div>
             <div class="escrita">
                 <h1>Diablo IV</h1>
@@ -68,22 +68,22 @@
                     <div class="aplicativos"> 
                         <a href="https://www.xbox.com/pt-BR/games/store/diablo-iv/9NQRCD3W41L3">
                         <div style="background-color: #0d6601;">
-                            <img src="/img/xbox.png" alt="xbox">
+                            <img src="img/xbox.png" alt="xbox">
                         </div>
                         </a>
                         <a href="https://store.playstation.com/pt-br/concept/231761">
                         <div style="background-color: rgb(0, 14, 92);">
-                            <img src="/img/psn.png" alt="psn">
+                            <img src="img/psn.png" alt="psn">
                         </div>
                         </a>
                         <a href="https://store.steampowered.com/app/2344520/Diablo_IV/">
                         <div style="background-color: #132940;">
-                            <img src="/img/Steam_Logo.png" alt="steam">
+                            <img src="img/Steam_Logo.png" alt="steam">
                         </div>
                         </a>
                         <a href="https://us.shop.battle.net/pt-br/product/diablo-iv">
                         <div style="background-color: #0074e0">
-                            <img src="/img/battlenet.png" alt="battlenet">
+                            <img src="img/battlenet.png" alt="battlenet">
                         </div>
                         </a>
                     </div>
@@ -96,7 +96,7 @@
                     <h2 class="titulo_avaliacoes">Avaliações</h2>
                     <div class="avaliacoes">
                         <div>
-                            <img src="/img/IGN-Logo.png" alt="">
+                            <img src="img/IGN-Logo.png" alt="">
                             <p>9.0/10.0</p>
                             <div class="estrelas terceira">
                                 <span class="estrela">&#9733;</span>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="avaliacoes">
                         <div>
-                            <img src="/img/metacritc.png" alt="">
+                            <img src="img/metacritc.png" alt="">
                             <p>8.6/10.0</p>
                             <div class="estrelas">
                                 <span class="estrela">&#9733;</span>
@@ -140,6 +140,6 @@
         <p>COPYRIGHT BY @MARCO.CODEV</p>
     </footer>
 
-    <script src="/script/paginas.js"></script>
+    <script src="script/paginas.js"></script>
 </body>
 </html>
