--- a/html/minecraft.html
+++ b/html/minecraft.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/paginas_jogos.css">
-    <link rel="stylesheet" href="/css/background/minecraft.css">
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="css/paginas_jogos.css">
+    <link rel="stylesheet" href="css/background/minecraft.css">
+    <link rel="stylesheet" href="css/reset.css">
     <title>Minecraft - GameReview</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
                 <li>           
                     <div id="busca">     
                         <input type="search" name="busca" id="input"  placeholder="Buscar..." onkeypress="checkEnter(event)">
-                        <img src="/assets/lupa.png" alt="lupa" id="lupa" onclick="busca()">
+                        <img src="assets/lupa.png" alt="lupa" id="lupa" onclick="busca()">
                     </div>
                     <ul id="resultadoPesquisa"></ul>
                 </li>
@@ -31,7 +31,7 @@
     <main>
         <div class="descricao">
             <div class="imagem">
-                <img src="/img/minecraft.jpg" alt="minecraft">
+                <img src="img/minecraft.jpg" alt="minecraft">
             </div>
             <div class="escrita">
                 <h1>Minecraft</h1>
@@ -66,32 +66,32 @@
                     <div class="aplicativos"> 
                         <a href="https://www.xbox.com/pt-br/games/minecraft?ef_id=_k_CjwKCAiA3JCvBhA8EiwA4kujZqm75EP9au3mS1dVPaoS6rSfSA8MYJfEDv0cM-gvSZumvqhIZixOIRoCSUAQAvD_BwE_k_&OCID=AIDcmmaigrfm8i_SEM__k_CjwKCAiA3JCvBhA8EiwA4kujZqm75EP9au3mS1dVPaoS6rSfSA8MYJfEDv0cM-gvSZumvqhIZixOIRoCSUAQAvD_BwE_k_&gad_source=1&gclid=CjwKCAiA3JCvBhA8EiwA4kujZqm75EP9au3mS1dVPaoS6rSfSA8MYJfEDv0cM-gvSZumvqhIZixOIRoCSUAQAvD_BwE">
                         <div style="background-color: #0d6601;">
-                            <img src="/img/xbox.png" alt="xbox">
+                            <img src="img/xbox.png" alt="xbox">
                         </div>
                         </a>
                         <a href="https://store.playstation.com/pt-br/product/UP4433-CUSA00744_00-MINECRAFTPS40001">
                         <div style="background-color: rgb(0, 14, 92);">
-                            <img src="/img/psn.png" alt="psn">
+                            <img src="img/psn.png" alt="psn">
                         </div>
                         </a>
                         <a href="https://play.google.com/store/apps/details?id=com.mojang.minecraftpe">
                         <div>
-                            <img src="/img/logo_playsotre.png" alt="playstore">
+                            <img src="img/logo_playsotre.png" alt="playstore">
                         </div>
                         </a>
                         <a href="https://apps.apple.com/br/app/minecraft/id479516143">
                         <div style="  background: -webkit-linear-gradient(#05cafb, #0467f1)">
-                            <img src="/img/aplle.png" alt="apple">
+                            <img src="img/aplle.png" alt="apple">
                         </div>
                         </a>
                         <a href="https://www.minecraft.net/pt-br/download">
                         <div style="background-color: #3cb02c;">
-                            <img src="/img/mine.net.png" alt="mine.net">
+                            <img src="img/mine.net.png" alt="mine.net">
                         </div>
                         </a>
                         <a href="https://www.nintendo.com/pt-br/store/products/minecraft-switch/">
                         <div style="background-color: #e7000a; width: auto;">
-                            <img src="/img/Nintendo-logo.png" style="width: 100%;" alt="nintendo">
+                            <img src="img/Nintendo-logo.png" style="width: 100%;" alt="nintendo">
                         </div>
                          </a>
                     </div>
@@ -108,7 +108,7 @@
                     <h2 class="titulo_avaliacoes">Avaliações</h2>
                     <div class="avaliacoes">
                         <div>
-                            <img src="/img/IGN-Logo.png" alt="">
+                            <img src="img/IGN-Logo.png" alt="">
                             <p>9.0/10.0</p>
                             <div class="estrelas terceira">
                                 <span class="estrela">&#9733;</span>
@@ -121,7 +121,7 @@
                     </div>
                     <div class="avaliacoes">
                         <div>
-                            <img src="/img/metacritc.png" alt="">
+                            <img src="img/metacritc.png" alt="">
                             <p>8.0/10.0</p>
                             <div class="estrelas">
                                 <span class="estrela">&#9733;</span>
@@ -134,7 +134,7 @@
                     </div>
                     <div class="avaliacoes">
                         <div>
-                            <img src="/img/techtudo.png" alt="">
+                            <img src="img/techtudo.png" alt="">
                             <p>5.0/5.0</p>
                             <div class="estrelas segunda">
                                 <span class="estrela">&#9733;</span>
@@ -165,6 +165,6 @@
         <p>COPYRIGHT BY @MARCO.CODEV</p>
     </footer>
 
-    <script src="/script/paginas.js"></script>
+    <script src="script/paginas.js"></script>
 </body>
 </html>
