--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
         <p>COPYRIGHT BY @MARCO.CODEV</p>
     </footer>
 
-    <script src="script/script.js"></script>
+    <script src="html/script/script.js"></script>
 </body>
 </html>
