--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 
 
                 <div class="slide first">
-                    <img src="img/thelastofus.png" alt="hollow-knight">
+                    <img src="html/img/thelastofus.png" alt="hollow-knight">
                 </div>
                 <div class="slide">
-                    <img src="img/rdr.png" alt="hollow-knight">
+                    <img src="html/img/rdr.png" alt="hollow-knight">
                 </div>
                 <div class="slide">
-                    <img src="img/hades.png" alt="hollow-knight">
+                    <img src="html/img/hades.png" alt="hollow-knight">
                 </div>
                 <div class="slide">
-                    <img src="img/elden-ring.png" alt="hollow-knight">
+                    <img src="html/img/elden-ring.png" alt="hollow-knight">
                 </div>
             
 
@@ -64,31 +64,31 @@
         </div>
         <div class="jogos">
             <a href="html/minecraft.html" class="container">
-                <img src="img/minecraft.jpg">
+                <img src="html/img/minecraft.jpg">
             </a>
             <a  href="html/diablo.html" class="container">
-                <img src="img/diablo.png">
+                <img src="html/img/diablo.png">
             </a>
             <a  href="html/farcry6.html" class="container">
-                <img src="img/far_cry.jpg">
+                <img src="html/img/far_cry.jpg">
             </a>
             <a  href="" class="container">
-                <img src="img/gtav.png">
+                <img src="html/img/gtav.png">
             </a>
             <a  href="" class="container">
-                <img src="img/black_flag.png">
+                <img src="html/img/black_flag.png">
             </a>
             <a  href="" class="container">
-                <img src="img/rdr_capa.png">
+                <img src="html/img/rdr_capa.png">
             </a>
             <a  href="" class="container">
-                <img src="img/skyrim.png">
+                <img src="html/img/skyrim.png">
             </a>
             <a  href="" class="container">
-                <img src="img/tlou.png">
+                <img src="html/img/tlou.png">
             </a>
             <a  href="" class="container">
-                <img src="img/alan.jpg">
+                <img src="html/img/alan.jpg">
             </a>
         </div>
     </main>
