--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li>           
                     <div id="busca">     
                         <input type="search" name="busca" id="input"  placeholder="Buscar..." onkeypress="checkEnter(event)">
-                        <img src="/html/assets/lupa.png" alt="lupa" id="lupa" onclick="busca()">
+                        <img src="html/assets/lupa.png" alt="lupa" id="lupa" onclick="busca()">
                     </div>
                     <ul id="resultadoPesquisa"></ul>
                 </li>
