--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header id="header">
         <nav>
             <ul class="esquerda">
-                <li><a href="/">Home</a></li>
-                <li><a href="/">Sobre</a></li>
+                <li><a href="https://marco-aurelio-martins.github.io/Projeto-Front-End/">Home</a></li>
+                <li><a href="https://marco-aurelio-martins.github.io/Projeto-Front-End/">Sobre</a></li>
             </ul>
             <ul class="direita">
                 <li>           
